--- a/config/database.yml
+++ b/config/database.yml
@@ -21,17 +21,15 @@ default: &default
 
 development:
   <<: *default
-  database: recipe_app_development
-  username: postgres
-  password: <%= ENV["recipe_app_pass"] %>
+  database: recipe_app_ruby_development
 
-  # The specified database role being used to connect to postgres.
-  # To create additional roles in postgres see `$ createuser --help`.
-  # When left blank, postgres will use the default role. This is
+  # The specified database role being used to connect to PostgreSQL.
+  # To create additional roles in PostgreSQL see `$ createuser --help`.
+  # When left blank, PostgreSQL will use the default role. This is
   # the same name as the operating system user running Rails.
-  #username: recipe_app
+  #username: recipe_app_ruby
 
-  # The password associated with the postgres role (username).
+  # The password associated with the PostgreSQL role (username).
   #password:
 
   # Connect on a TCP socket. Omitted by default since the client uses a
@@ -57,9 +55,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: recipe_app_test
-  username: postgres
-  password: <%= ENV["recipe_app_pass"] %>
+  database: recipe_app_ruby_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -83,6 +79,6 @@ test:
 #
 production:
   <<: *default
-  database: recipe_app_production
-  username: postgres
-  password: <%= ENV["recipe_app_pass"] %>
+  database: recipe_app_ruby_production
+  username: recipe_app_ruby
+  password: <%= ENV["RECIPE_APP_RUBY_DATABASE_PASSWORD"] %>
